<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.dream.tea.fragment.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/navigation_library_fragment" />

    <fragment
        android:id="@+id/navigation_desk"
        android:name="com.dream.tea.fragment.DeskFragment"
        android:label="@string/title_desk"
        tools:layout="@layout/navigation_desk_fragment" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.dream.tea.fragment.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/navigation_person_fragment" />

</navigation>